@@ -1,5 +1,5 @@
 
-version=cvs
+version=1.3
 description=A code coverage analysis tool.
 
 # TODO: Make this better.
